Version 0.7.16 * adjusted ExecutionManagementController to use Virtual Threads * various ui adjustments * trace log to file